--- a/page/tabBar/homePages/vipSeeWorkDetails/vipSeeWorkDetails.wxml
+++ b/page/tabBar/homePages/vipSeeWorkDetails/vipSeeWorkDetails.wxml
@@ -26,16 +26,25 @@
   <!-- select -->
   <view wx:if="{{selectStatus > 0}}" class='select_box bg_fff'>
     <block wx:if="{{selectStatus == 1}}">
-      <view>全部</view>
-      <view wx:for="{{headerDate}}" wx:item="item" wx:key="">{{item}}</view>
+      <view bindtap='peojectList'>全部</view>
+      <view bindtap='peojectList' wx:for="{{headerDate}}" wx:item="item" 
+        wx:key="" data-month="{{item}}">
+        {{item}}
+      </view>
     </block>
     <block wx:if="{{selectStatus == 2}}">
-      <view>全部</view>
-      <view wx:for="{{perData}}" wx:item="item" wx:key="">{{item.userName}}</view>
+      <view bindtap='companyList'>全部</view>
+      <view bindtap='companyList' wx:for="{{perData}}" wx:item="item" wx:key=""
+        data-personid='{{item.userId}}'>
+        {{item.userName}}
+      </view>
     </block>
     <block wx:if="{{selectStatus == 3}}">
-      <view>全部</view>
-      <view wx:for="{{statusData}}" wx:item="item" wx:key="">{{item}}</view>
+      <view bindtap='classList'>全部</view>
+      <view bindtap='classList' wx:for="{{statusData}}" wx:item="item" wx:key=""
+        data-status='{{item}}'>
+        {{item}}
+      </view>
     </block>
   </view>
 
@@ -66,9 +75,9 @@
       </view>
   </view>
 
-  <view class='vip_title'>班组明细</view>
+  <view wx:if="{{tabData.t.length>0}}" class='vip_title'>班组明细</view>
   <!-- 表格 -->
-  <view>
+  <view wx:if="{{tabData.t.length>0}}">
     <view class='com_tab_title tab_title'>
       <view class='first_checkbox'>
       <label class="checkboxs"> 
@@ -83,23 +92,26 @@
       <view class='last_child'>状态</view>
     </view>
     
-    <view wx:for="{{detailsData.t}}" wx:item="" wx:key="" class='com_tab_title'
-      bindtap='goDetails' data-month="{{item.startDate}}">
+    <view wx:for="{{tabData.t}}" wx:item="" wx:key="" class='com_tab_title'
+      wx:for-index='idx'>
       <view class='first_checkbox'>
-        <label class="checkboxs"> 
-          <checkbox></checkbox>
-        </label>
+        <checkbox-group bindchange="checkboxChange" data-ischecked='{{item.isChecked}}'
+          data-idx="{{idx}}">
+          <label class="checkboxs"> 
+            <checkbox checked='{{item.isChecked}}'></checkbox>
+          </label>
+        </checkbox-group>
       </view>
-      <view>{{item.userName}}</view>
-      <view>{{item.startDate}}</view>
-      <view>{{item.subPro}}</view>
-      <view>{{item.workTypeName}}</view>
-      <view>{{item.quantity}}</view>
-      <view class='last_child'>{{item.status}}</view>
+      <view bindtap='goDetails' data-month="{{item.startDate}}">{{item.userName}}</view>
+      <view bindtap='goDetails' data-month="{{item.startDate}}">{{item.startDate}}</view>
+      <view bindtap='goDetails' data-month="{{item.startDate}}">{{item.subPro}}</view>
+      <view bindtap='goDetails' data-month="{{item.startDate}}">{{item.workTypeName}}</view>
+      <view bindtap='goDetails' data-month="{{item.startDate}}">{{item.quantity}}</view>
+      <view bindtap='goDetails' data-month="{{item.startDate}}" class='last_child'>{{item.status}}</view>
     </view>
 
 
   </view>
 
-  <view class='com_width bg_blue all_yes'>确定</view>
+  <view bindtap='confirmTap' class='com_width bg_blue all_yes'>确定</view>
 </view>
